# GraphMIC

./: CMakeLists.txt  LICENSE  Readme.md
cmake/: FindBoostNumpy.cmake  Functions.cmake  Superbuild.cmake  meta_cv.hpp.in  meta_graphmic.hpp.in  meta_itk.hpp.in  meta_mitk.hpp.in  qt.conf
cmake/targets/: app.cmake  core.cmake  logic.cmake  preview.cmake  python.cmake  test.cmake  viewer.cmake
cmakeExternals/: BoostNumpy.cmake  MITK.cmake
cmakeExternals/patch/: MITK-2015.05.99.patch
modules/app/qml/: context.qml  footer.qml  qmldir  window.qml
modules/app/src/App/: main.cpp
modules/core/qml/lib/: checkbox.qml  doubleslider.qml  dropdown.qml  edge.qml  grid.qml  icon.qml  iconbutton.qml  icons.js  label.qml  layoutenums.js  listview.qml  mousearea.qml  orientation.js  qmldir  scrollcolumn.qml  scrollview.qml  slider.qml  spinbox.qml  splitview.qml  tabheader.qml  tablabel.qml  tabview.qml  taglabel.qml  textbutton.qml  textedit.qml  textinput.qml
modules/core/qml/notification/: entry.qml  qmldir  textlabel.qml  titlelabel.qml  view.qml
modules/core/qml/sidebar/: qmldir  section.qml  view.qml
modules/core/src/App/: gmApp.cpp  gmApp.hpp  gmAppContextBase.cpp  gmAppContextBase.hpp  gmAppContextController.cpp  gmAppContextController.hpp  gmAppContextGaph.cpp  gmAppContextGraph.hpp  gmAppContextPython.cpp  gmAppContextPython.hpp  gmAppContextSettings.cpp  gmAppContextSettings.hpp  gmAppContextViewer.cpp  gmAppContextViewer.hpp  gmAppController.cpp  gmAppController.hpp  gmAppMenu.cpp  gmAppMenu.hpp  gmAppSidebar.cpp  gmAppSidebar.hpp
modules/core/src/Component/: gmComponentBase.cpp  gmComponentBase.hpp  gmComponentType.cpp  gmComponentType.hpp
modules/core/src/Connection/: gmConnectionList.cpp  gmConnectionList.hpp  gmConnectionObject.cpp  gmConnectionObject.hpp  gmConnectionView.cpp  gmConnectionView.hpp
modules/core/src/Data/: gmDataBase.cpp  gmDataBase.hpp  gmDataConnection.hpp  gmDataImage.cpp  gmDataImage.hpp  gmDataNumber.cpp  gmDataNumber.hpp  gmDataPointset.cpp  gmDataPointset.hpp  gmDataSizeID.hpp  gmDataType.cpp  gmDataType.hpp  gmDataVector.cpp  gmDataVector.hpp
modules/core/src/Debug/: gmDebugController.cpp  gmDebugController.hpp  gmLog.cpp  gmLog.hpp
modules/core/src/Dialog/: gmDialogAbout.cpp  gmDialogAbout.hpp  gmDialogBase.cpp  gmDialogBase.hpp  gmDialogController.cpp  gmDialogController.hpp  gmDialogDeleteFile.cpp  gmDialogDeleteFile.hpp  gmDialogSettings.cpp  gmDialogSettings.hpp
modules/core/src/Export/: gmCoreExport.hpp
modules/core/src/IO/: gmIOExceptions.cpp  gmIOExceptions.hpp  gmIOFile.cpp  gmIOFile.hpp  gmIOGraph.cpp  gmIOGraph.hpp  gmIOJson.cpp  gmIOJson.hpp  gmIONode.cpp  gmIONode.hpp  gmIOPath.cpp  gmIOPath.hpp
modules/core/src/Image/: gmImageAttributes.cpp  gmImageAttributes.hpp  gmImageConvert.cpp  gmImageConvert.hpp  gmImageType.hpp
modules/core/src/Interface/: gmInterfacePreviewController.cpp  gmInterfacePreviewController.hpp  gmInterfacePythonController.cpp  gmInterfacePythonController.hpp  gmInterfaceViewerController.cpp  gmInterfaceViewerController.hpp
modules/core/src/Logic/: gmLogicBase.cpp  gmLogicBase.hpp  gmLogicEnable.cpp  gmLogicEnable.hpp  gmLogicFactory.cpp  gmLogicFactory.hpp  gmLogicInvoke.hpp  gmLogicRegister.hpp
modules/core/src/Modules/: gmModuleApp.cpp  gmModuleApp.hpp  gmModuleBase.hpp  gmModuleConnection.cpp  gmModuleConnection.hpp  gmModuleController.cpp  gmModuleController.hpp  gmModuleCore.cpp  gmModuleCore.hpp  gmModuleData.cpp  gmModuleData.hpp  gmModuleDebug.cpp  gmModuleDebug.hpp  (+12 more)
modules/preview/qml/: imageview.qml  navigator.qml  numberview.qml  pointsetview.qml  qmldir  vectorview.qml  view.qml
modules/python/qml/: header.qml  icon.qml  qmldir  view.qml
modules/test/qml/: caselistview.qml  caseview.qml  footer.qml  header.qml  outputview.qml  qmldir  titledlabel.qml  unitlistview.qml  unitresultview.qml  unitview.qml  window.qml
modules/viewer/qml/: externalViewer.qml  externalViewerHeader.qml  qmldir
res/config/: settings.json  startup.project.json
res/config/schemes/: python.json
res/icons/develop/: GraphMIC_1.icns  GraphMIC_2.icns  GraphMIC_3.icns  GraphMIC_4.icns
res/icons/release/: GraphMIC_1.icns  GraphMIC_2.icns  GraphMIC_3.icns  GraphMIC_4.icns
res/icons/testing/: GraphMIC_1.icns  GraphMIC_2.icns  GraphMIC_3.icns  GraphMIC_4.icns
res/qml/: app.qml  test.qml
res/tests/config/: cvAbsdiff.json  cvAdd.json  cvAddweighted.json  cvBitwiseAnd.json  cvBitwiseNot.json  cvBitwiseOr.json  cvBitwiseXor.json  cvCanny.json  cvCompare.json  cvConvertScaleAbs.json  cvCountNonZero.json  cvDeterminant.json  cvDivide.json  cvExp.json  cvFlip.json  cvInvert.json  cvLog.json  cvMax.json  cvMean.json  cvPreCornerDetect.json  cvScaleAdd.json  cvSort.json  cvSplit.json  cvSqrt.json  cvSubtract.json  cvSum.json  cvTranspose.json  itkAbsImageFilter.json  itkAbsoluteValueDifferenceImageFilter.json  itkAccumulateImageFilter.json  itkAcosImageFilter.json  itkAddImageFilter.json  itkAndImageFilter.json  itkApproximateSignedDistanceMapImageFilter.json  itkAsinImageFilter.json  itkAtan2ImageFilter.json  itkAtanImageFilter.json  itkBilateralImageFilter.json  itkBinaryContourImageFilter.json  itkBinaryMagnitudeImageFilter.json  (+23 more)
res/tests/data/: a-2d-rgb-char.nrrd  a-2d-rgb-double.nrrd  a-2d-rgb-float.nrrd  a-2d-rgb-int.nrrd  a-2d-rgb-short.nrrd  a-2d-rgb-uchar.nrrd  a-2d-rgb-uint.nrrd  a-2d-rgb-ushort.nrrd  a-2d-rgba-char.nrrd  a-2d-rgba-double.nrrd  a-2d-rgba-float.nrrd  a-2d-rgba-int.nrrd  a-2d-rgba-short.nrrd  a-2d-rgba-uchar.nrrd  a-2d-rgba-uint.nrrd  a-2d-rgba-ushort.nrrd  a-2d-scalar-char.nrrd  a-2d-scalar-double.nrrd  a-2d-scalar-float.nrrd  a-2d-scalar-int.nrrd  a-2d-scalar-short.nrrd  a-2d-scalar-uchar.nrrd  a-2d-scalar-uint.nrrd  a-2d-scalar-ushort.nrrd  a-3d-rgb-char.nrrd  a-3d-rgb-double.nrrd  a-3d-rgb-float.nrrd  a-3d-rgb-int.nrrd  a-3d-rgb-short.nrrd  a-3d-rgb-uchar.nrrd  a-3d-rgb-uint.nrrd  a-3d-rgb-ushort.nrrd  a-3d-rgba-char.nrrd  a-3d-rgba-double.nrrd  a-3d-rgba-float.nrrd  a-3d-rgba-int.nrrd  a-3d-rgba-short.nrrd  a-3d-rgba-uchar.nrrd  a-3d-rgba-uint.nrrd  a-3d-rgba-ushort.nrrd  (+56 more)
(+616 files in other folders)
